# silvery-botlab-f22

./: .gitignore  CMakeLists.txt  README.md  build.sh  current.map  requirements.sh
data/astar/: convex_poses.txt
logs/: ckpt2.map  lcmlog-2022-11-30.00.REMOVED.git-id
mbot/: CMakeLists.txt
mbot/common_utils/: CMakeLists.txt
mbot/common_utils/include/common_utils/geometric/: interpolation.hpp  point.hpp  pose_trace.hpp
mbot/common_utils/src/: config.c  encode_bytes.c  getopt.c  io_util.c  ioutils.c  param_widget.c  pg.c  serial.c  serial_util.c  ssocket.c  string_util.c  task_thread.c  time_util.c  timestamp.c  timesync.c  url_parser.c  varray.c  vhash.c  zarray.c  zhash.c
mbot/common_utils/src/geometric/: pose_trace.cpp
mbot/drivers/: CMakeLists.txt
mbot/drivers/optitrack/: CMakeLists.txt  README
mbot/drivers/optitrack/src/: PacketClient.cpp
mbot/drivers/rplidar/: CMakeLists.txt
mbot/drivers/rplidar/lib/: .gitignore
mbot/drivers/rplidar/src/: rplidar_driver.cpp
mbot/mbot_autonomy/: CMakeLists.txt
mbot/mbot_autonomy/include/mbot/: mbot_channels.h
mbot/mbot_autonomy/include/planning/: astar.hpp  exploration.hpp  frontiers.hpp  motion_planner.hpp  motion_planner_server.hpp  obstacle_distance_grid.hpp
mbot/mbot_autonomy/include/slam/: action_model.hpp  mapping.hpp  moving_laser_scan.hpp  occupancy_grid.hpp  particle_filter.hpp  sensor_model.hpp  slam.hpp  slam_channels.h
mbot/mbot_autonomy/include/utils/: grid_utils.hpp
mbot/mbot_autonomy/src/mbot/: drive_square.cpp  maneuver_controller.h  motion_controller.cpp  oled_example.cpp  omni_maneuver_controller.h  timesync.cpp  wifi_reader.c
mbot/mbot_autonomy/src/planning/: astar.cpp  astar_test.cpp  exploration.cpp  exploration_main.cpp  frontiers.cpp  motion_planner.cpp  motion_planner_server.cpp  motion_planner_server_main.cpp  obstacle_distance_grid.cpp  obstacle_distance_grid_test.cpp
mbot/mbot_autonomy/src/sim/: lidar.py  mbot.py  sim.py  timing.py
mbot/mbot_autonomy/src/slam/: action_model.cpp  mapping.cpp  moving_laser_scan.cpp  occupancy_grid.cpp  particle_filter.cpp  sensor_model.cpp  slam.cpp  slam_main.cpp
mbot/mbot_lcm_msgs/: CMakeLists.txt
mbot/mbot_lcm_msgs/lcmtypes/: exploration_status_t.lcm  lidar_t.lcm  mbot_encoder_t.lcm  mbot_imu_t.lcm  mbot_motor_command_t.lcm  mbot_state_t.lcm  mbot_system_reset_t.lcm  mbot_wheel_ctrl_t.lcm  message_received_t.lcm  occupancy_grid_t.lcm  odometry_t.lcm  oled_message_t.lcm  omni_encoder_t.lcm  omni_motor_command_t.lcm  particle_t.lcm  particles_t.lcm  pid_values_t.lcm  planner_request_t.lcm  pose_xyt_t.lcm  reset_odometry_t.lcm  robot_path_t.lcm  timestamp_t.lcm  wifi_data_t.lcm
mbot/mbot_pico_shim/: CMakeLists.txt
mbot/mbot_pico_shim/include/mbot_pico_shim/: comms_common.h  listener.h  messages_mb.h  protocol.h  topic_data.h
mbot/mbot_pico_shim/src/: comms_common.c  listener.c  mbot_shim_main.c  messages_mb.c  protocol.c  topic_data.c
mbot/visualizers/: CMakeLists.txt
mbot/visualizers/botgui/: CMakeLists.txt
mbot/visualizers/botgui/include/: botgui.hpp  drawing_functions.hpp  vx_gtk_window_base.hpp  vx_utils.hpp
mbot/visualizers/botgui/src/: botgui.cpp  botgui_main.cpp  drawing_functions.cpp  vx_gtk_window_base.cpp  vx_utils.cpp
mbot/visualizers/imagesource/: CMakeLists.txt
mbot/visualizers/imagesource/include/imagesource/: image_source.h
mbot/visualizers/imagesource/src/: image_convert.c  image_source.c  image_source_dc1394.c  image_source_filedir.c  image_source_islog.c  image_source_null.c  image_source_pgusb.c  image_source_tcp.c  image_source_v4l2.c  image_u32.c  image_u8.c  image_u8x3.c  image_util.c  istest.c  isview.c  pnm.c
mbot/visualizers/vx/: CMakeLists.txt
mbot/visualizers/vx/include/vx/: vx.h  vx_console.h  vx_display.h  vx_gl_renderer.h  vx_object.h  vx_resc_manager.h  vx_tcp_display.h  vx_tcp_util.h  vx_util.h  vx_world.h
mbot/visualizers/vx/src/: default_camera_mgr.c  default_camera_mgr.h  default_event_handler.c  default_event_handler.h  vx_camera_pos.c  vx_code_input_stream.c  vx_code_output_stream.c  vx_console.c  vx_gl_renderer.c  vx_global.c  vx_layer.c  vx_make_font.c  vx_matrix_stack.c  vx_program.c  vx_ray3.c  vx_remote_display_source.c  vx_resc.c  vx_resc_manager.c  vx_tcp_display.c  vx_tcp_util.c  vx_util.c  vx_viewport_mgr.c  vx_world.c  vxo_arrow.c  vxo_axes.c  vxo_box.c  vxo_chain.c  vxo_circle.c  vxo_cylinder.c  vxo_depth_test.c  vxo_grid.c  vxo_image.c  vxo_lines.c  vxo_mat.c  vxo_mesh.c  vxo_objmtl.c  vxo_pix_coords.c  vxo_points.c  vxo_rect.c  vxo_robot.c  (+7 more)
mbot/visualizers/vx/src/gtk/: visualization.cpp  vx_block_maze.c  vx_demo.c  vx_gtk_buffer_manager.c  vx_gtk_display.c  vx_gtk_display_source.c  vx_remote_viewer.c  vx_resc_test.c  vx_scene_viewer.c  vx_stress_test.c
python/: mbot_shim_app.py
python/MBot/Messages/: message_defs.py
python/MBot/SerialProtocol/: protocol.py
scripts/: cleanup_bonus.sh  cleanup_botlab.sh  launch_botlab.sh  package_built_system.sh  setenv.sh
scripts/python/: .gitignore  Makefile  bonus.py  bouns.py  decode_log.py  decode_pid_log.py  decode_state_log.py  gamepad_reader.py  mbot_drive_simple.py  mbot_gamepad.py  mbot_teleop.py  mbot_test_drive.py  motor_data_analyze.py  path_generator.py  point_genration.py  reset_encoders.py  reset_mbot_test.py  reset_odometry.py  send_pid_params.py  step_test.py  stop_mbot.py
scripts/python/omni_webapp/: omni_webapp.py
scripts/python/omni_webapp/static/: main.css  motorscript.js
scripts/python/omni_webapp/templates/: index.html
scripts/python/sim/: lidar.py  mbot.py  sim.py
